--- a/build.gradle
+++ b/build.gradle
@@ -7,22 +7,31 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "com.devsoap.plugin:gradle-vaadin-plugin:1.3.1"
     }
 }
 
+plugins {
+//    id 'com.devsoap.plugin.vaadin' version '1.3.1'
+    id 'idea'
+}
+
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group 'com.jim'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-
 sourceCompatibility = 10
 
 repositories {
     mavenCentral()
+
+    maven {
+        url 'https://maven.vaadin.com/vaadin-addons'
+    }
 }
 
 dependencies {
@@ -36,7 +45,9 @@ dependencies {
         exclude module : 'tomcat-embeded-core'
         exclude module : 'spring-boot-starter-tomcat'
     }
-    testCompile('org.springframework.boot:spring-boot-devtools')
+    compile('org.vaadin.addons:searchbox:0.1.3')
+    compile('org.apache.commons:commons-text:1.3')
+    compile('org.springframework.boot:spring-boot-devtools')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -53,3 +64,4 @@ dependencyManagement {
         mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
     }
 }
+
